Resolved the 'incompatible types' error in `BaseAIService.java` by explicitly specifying the type of the `CompletableFuture`.